FIX(submissions_table): table is fixed on smaller screens

--- a/app/static/css/submissions_table.css
+++ b/app/static/css/submissions_table.css
@@ -32,7 +32,7 @@
 }
 
 .submissions_table .language {
-    padding-right: 60px !important;
+    padding-right: 30px !important;
     text-align: left;
 }
 
@@ -62,10 +62,14 @@
     font-weight: 400;
 }
 
-.submissions_table .table_row_column.language {
+.submissions_table .table_row_column {
     display: flex;
     align-items: center;
     flex-direction: row;
+}
+
+.submissions_table .table_row_column.result {
+    padding-right: 5px;
 }
 
 .submissions_table .table_row_column.language .language__icon {
@@ -91,4 +95,8 @@
 
 .submission_result .submission_result__icon {
     margin-right: 6px;
+}
+
+.submission_result .submission_result__message span {
+    display: inline-block;
 }
